--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
 
-<script>
+<!-- <script>
   window.fbAsyncInit = function() {
     FB.init({
       appId      : '{382051735565388}',
@@ -69,7 +69,7 @@ function checkLoginState() {
   });
 }
 
-</script>
+</script> -->
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
